Fix 'dsFunction' (Kate syntax file) not colored in TextEditor

- Added the right TextFormat for dsFunction
- Added TODO comments for missing dsError and dsAlert

Task-number: QTCREATORBUG-10788
Change-Id: I31862971ac5b47f13036aa9c55552778ad88d4ee
Reviewed-by: Thomas Boutroue <thebootroo@gmail.com>
Reviewed-by: David Schulz <david.schulz@digia.com>